# tech-hy-ecosystem

./: .gitignore  Anchor.toml  Dockerfile  PRD.md  README-DEV.md  README.md  docker-compose.yml  package.json  papers-links.md  tsconfig.json
.github/workflows/: test.yml
TRASH/: TRASH.md
code/: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
code/PRD/: PRD.md  development-plan.md  Рассуждения.md
code/programs/: README.md  STATUS.md
code/programs/burn-and-earn/: Cargo.toml  TASKS.md
code/programs/burn-and-earn/src/: lib.rs
code/programs/governance/: TASKS.md
code/programs/nft-fee-key/: TASKS.md
code/programs/nft-investors-hand/: TASKS.md
code/programs/vc-staking/: TASKS.md
code/programs/vc-token/: Cargo.toml  README.md  TASKS.md
code/programs/vc-token/src/: lib.rs
code/programs/vc-token/tests/unit/: token_tests.ts
code/programs/vg-staking/: TASKS.md
code/programs/vg-token/: Cargo.toml  README.md  TASKS.md
code/programs/vg-token/src/: lib.rs
code/scripts/: run-test-environment.sh  setup-environment.sh  setup-environment.sh.bak
code/tech_hy_contracts/: Anchor.toml  Dockerfile  docker-compose.yml  package-lock.json
code/tech_hy_contracts/tests/: tech_hy_contracts.ts
code/tests/: Anchor.toml  package.json  tsconfig.json  vc-token.ts  vg-token.ts
code/tests/e2e/: full-ecosystem.test.ts
code/tests/integration/: ecosystem-flow.test.ts
code/tests/scripts/: run-tests.sh  setup-test-env.sh
code/tests/unit/: burn-and-earn.test.ts  vc-token.test.ts  vg-token.test.ts
docs/: 01-system-architecture.md  02-tokens.md  03-burn-and-earn.md  04-vc-staking.md  04.5-investors-hand-nft.md.md  05-vg-staking.md  06-nft-fee-key.md  07-governance.md  08-api.md  09-security.md  10-implementation-plan.md  PRD.md  README.md
docs/specs/: data-structures.md  investors-hand-integration.md  vg-calculation-formula.md  vg-staking-formula.md
tests/: staking.ts  vc-token.ts  vg-token.ts
(+5 files in other folders)
