[package]
name = "vg-token"
version = "0.1.0"
description = "VG Token implementation with 10% tax for TECH-HY ecosystem"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "vg_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["metadata"] }
solana-program = "2.2.1" 